# rhyolite

./: .build.yml  CMakeLists.txt  component.cpp  entity.cpp  game.cpp  ontick.cpp  rhyolite.kdev4  scene.cpp  system.cpp  timersystem.cpp
Rhyolite2D/: CMakeLists.txt  Rhyolite2D_global.h  background.cpp  camera.cpp  cameraentity.cpp  customrender.cpp  renderer2d.cpp  sprite.cpp  transform.cpp
Rhyolite2D/include/rhyolite/: 2d.h
Rhyolite2D/include/rhyolite/2d/: background.h  camera.h  cameraentity.h  customrender.h  renderer2d.h  sprite.h  transform.h
RhyoliteInput/: CMakeLists.txt  RhyoliteInput_global.h  inputhandler.cpp
RhyoliteInput/include/rhyolite/: input.h
RhyoliteInput/include/rhyolite/input/: inputhandler.h
RhyoliteMath/: CMakeLists.txt  RhyoliteMath_global.h  util.cpp
RhyoliteMath/include/rhyolite/: math.h
RhyoliteMath/include/rhyolite/math/: util.h
example/: CMakeLists.txt  main.cpp  movabletext.cpp  movabletext.h
include/rhyolite/: component.h  core.h  entity.h  game.h  scene.h  system.h
include/rhyolite/timer/: ontick.h  timersystem.h
test/: CMakeLists.txt  tst_ecstest.cpp  tst_rhyolite2dtest.cpp  tst_rhyolitetest.cpp
